--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -25,10 +25,10 @@ FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
 
 🧠 Análise por DMV
-Sessões ativas
+- Sessões ativas
 SELECT * FROM sys.dm_exec_requests;
 
-Consultas com maior consumo de CPU
+- Consultas com maior consumo de CPU
 SELECT TOP 10
     qs.total_worker_time,
     st.text
@@ -36,7 +36,7 @@ FROM sys.dm_exec_query_stats qs
 CROSS APPLY sys.dm_exec_sql_text(qs.sql_handle) st
 ORDER BY qs.total_worker_time DESC;
 
-Análise de Waits
+- Análise de Waits
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
@@ -47,41 +47,28 @@ FROM sys.query_store_runtime_stats
 ORDER BY avg_cpu_time DESC;
 
 🖥️ PerfMon (Sistema Operacional)
-
-Principais contadores:
-Processor(_Total)% Processor Time
-SQLServer:SQL Statistics\Batch Requests/sec
-System\Processor Queue Length
+- Principais contadores:
+-- Processor(_Total)% Processor Time
+-- SQLServer:SQL Statistics\Batch Requests/sec
+-- System\Processor Queue Length
 
 🧰 ScriptDBA / Ferramentas Opcionais
-
 Ferramenta não nativa:
-
 sp_whoisactive
 
 🧩 Possíveis Causas
-
-Consulta mal otimizada
-
-Paralelismo excessivo
-
-Estatísticas desatualizadas
-
-Plano de execução inadequado
-
-Carga externa na VM ou Host
+- Consulta mal otimizada
+- Paralelismo excessivo
+- Estatísticas desatualizadas
+- Plano de execução inadequado
+- Carga externa na VM ou Host
 
 🛠️ Ações de Mitigação
-
-Identificar sessão dominante
-
-Avaliar plano de execução
-
-Validar índices e estatísticas
-
-Ajustar MAXDOP (quando aplicável)
-
-Aplicar Query Store forcing plan (se necessário)
+- Identificar sessão dominante
+- Avaliar plano de execução
+- Validar índices e estatísticas
+- Ajustar MAXDOP (quando aplicável)
+- Aplicar Query Store forcing plan (se necessário)
 
 🔁 Monitoramento Pós-Mitigation
 SELECT * FROM sys.dm_exec_requests;
@@ -89,5 +76,3 @@ SELECT * FROM sys.dm_exec_requests;
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
-
-
