--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -14,6 +14,7 @@ Identificar sessões, consultas e waits responsáveis por alto consumo de CPU na
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
+
 EXEC sp_whoisactive;
 
 ```sql
@@ -22,28 +23,37 @@ SELECT * FROM sys.dm_exec_requests;
 SELECT TOP 5 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
+```
 
 🧠 Análise por DMV
 - Sessões ativas
+```sql
 SELECT * FROM sys.dm_exec_requests;
+```
 
 - Consultas com maior consumo de CPU
+```sql
 SELECT TOP 10
     qs.total_worker_time,
     st.text
 FROM sys.dm_exec_query_stats qs
 CROSS APPLY sys.dm_exec_sql_text(qs.sql_handle) st
 ORDER BY qs.total_worker_time DESC;
+```
 
 - Análise de Waits
+```sql
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
+```
 
 📊 Query Store
+```sql
 SELECT TOP 10 *
 FROM sys.query_store_runtime_stats
 ORDER BY avg_cpu_time DESC;
+```
 
 🖥️ PerfMon (Sistema Operacional)
 - Principais contadores:
@@ -70,8 +80,10 @@ sp_whoisactive
 - Aplicar Query Store forcing plan (se necessário)
 
 🔁 Monitoramento Pós-Mitigation
+```sql
 SELECT * FROM sys.dm_exec_requests;
 
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
+```
