--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -19,7 +19,8 @@ EXEC sp_whoisactive;
 
 ```sql
 SELECT * FROM sys.dm_exec_requests;
-
+```
+```sql
 SELECT TOP 5 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
@@ -57,9 +58,9 @@ ORDER BY avg_cpu_time DESC;
 
 🖥️ PerfMon (Sistema Operacional)
 - Principais contadores:
--- Processor(_Total)% Processor Time
--- SQLServer:SQL Statistics\Batch Requests/sec
--- System\Processor Queue Length
+Processor(_Total)% Processor Time
+SQLServer:SQL Statistics\Batch Requests/sec
+System\Processor Queue Length
 
 🧰 ScriptDBA / Ferramentas Opcionais
 Ferramenta não nativa:
@@ -82,7 +83,8 @@ sp_whoisactive
 🔁 Monitoramento Pós-Mitigation
 ```sql
 SELECT * FROM sys.dm_exec_requests;
-
+```
+```sql
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
