--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -44,6 +44,7 @@ ORDER BY qs.total_worker_time DESC;
 
 ```
 
+
 - Análise de Waits
 ```sql
 SELECT TOP 10 *
@@ -51,6 +52,7 @@ FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
 
 ```
+
 
 📊 Query Store
 ```sql
@@ -62,12 +64,13 @@ ORDER BY avg_cpu_time DESC;
 
 🖥️ PerfMon (Sistema Operacional)
 - Principais contadores:
-Processor(_Total)% Processor Time
-SQLServer:SQL Statistics\Batch Requests/sec
-System\Processor Queue Length
+- Processor(_Total)% Processor Time
+- SQLServer:SQL Statistics\Batch Requests/sec
+- System\Processor Queue Length
 
 🧰 ScriptDBA / Ferramentas Opcionais
 Ferramenta não nativa:
+
 sp_whoisactive
 
 🧩 Possíveis Causas
