--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -29,7 +29,7 @@ ORDER BY wait_time_ms DESC;
 
 ---
 
-🧠 Análise por DMV
+🧠 **Análise por DMV**
 <br>
 - Sessões ativas
 
@@ -37,9 +37,9 @@ ORDER BY wait_time_ms DESC;
 SELECT * FROM sys.dm_exec_requests;
 ```
 
----
+<br>
 
-- Consultas com maior consumo de CPU
+**Consultas com maior consumo de CPU**
 
 ```sql
 SELECT TOP 10
@@ -50,9 +50,9 @@ CROSS APPLY sys.dm_exec_sql_text(qs.sql_handle) st
 ORDER BY qs.total_worker_time DESC;
 ```
 
----
+<br>
 
-- Análise de Waits
+**Análise de Waits**
 
 ```sql
 SELECT TOP 10 *
