--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -31,7 +31,7 @@ ORDER BY wait_time_ms DESC;
 
 🧠 **Análise por DMV**
 <br>
-- Sessões ativas
+**- Sessões ativas**
 
 ```sql
 SELECT * FROM sys.dm_exec_requests;
