--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -31,7 +31,7 @@ ORDER BY wait_time_ms DESC;
 
 🧠 **Análise por DMV**
 <br>
-**- Sessões ativas**
+- **Sessões ativas**
 
 ```sql
 SELECT * FROM sys.dm_exec_requests;
@@ -39,7 +39,7 @@ SELECT * FROM sys.dm_exec_requests;
 
 <br>
 
-**Consultas com maior consumo de CPU**
+- **Consultas com maior consumo de CPU**
 
 ```sql
 SELECT TOP 10
@@ -52,7 +52,7 @@ ORDER BY qs.total_worker_time DESC;
 
 <br>
 
-**Análise de Waits**
+- **Análise de Waits**
 
 ```sql
 SELECT TOP 10 *
