--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -74,7 +74,7 @@ ORDER BY avg_cpu_time DESC;
 
 🖥️ PerfMon (Sistema Operacional)
 
-- Principais contadores:
+Principais contadores:
 - Processor(_Total)% Processor Time
 - SQLServer:SQL Statistics\Batch Requests/sec
 - System\Processor Queue Length
@@ -85,7 +85,7 @@ ORDER BY avg_cpu_time DESC;
 
 Ferramenta não nativa:
 
-sp_whoisactive
+- sp_whoisactive
 
 ---
 
