--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -10,8 +10,6 @@
 
 Identificar pressão de memória no SQL Server e no Sistema Operacional, analisando grants, consumo interno e disponibilidade geral.
 
-<br><br>
-
 ---
 
 ## 🔎 Diagnóstico Inicial (Quick Triage)
@@ -29,21 +27,20 @@ FROM sys.dm_os_process_memory;
 ```
 <br><br>
 
-🧠 Análise por DMV
-🔹 Grants de Memória Ativos
+🧠 **Análise por DMV**
+- **Grants de Memória Ativos**
 ```sql
 SELECT *
 FROM sys.dm_exec_query_memory_grants;
 ```
 Objetivo:
 
-Identificar consultas aguardando memória
-
-Detectar RESOURCE_SEMAPHORE
+- Identificar consultas aguardando memória
+- Detectar RESOURCE_SEMAPHORE
 
 <br><br>
 
-🔹 Consumo Interno de Memória (Clerks)
+- **Consumo Interno de Memória (Clerks)**
 ```sql
 SELECT *
 FROM sys.dm_os_memory_clerks
@@ -51,92 +48,83 @@ ORDER BY pages_kb DESC;
 ```
 Objetivo:
 
-Identificar componentes internos com maior consumo
+-Identificar componentes internos com maior consumo
 
 <br><br>
 
-🔹 Memória do Processo SQL Server
+- **Memória do Processo SQL Server**
 ```sql
 SELECT *
 FROM sys.dm_os_process_memory;
 ```
 Objetivo:
 
-Validar pressão interna da instância
+- Validar pressão interna da instância
 
 <br><br>
 
-🔹 Memória Disponível no Sistema Operacional
+- **Memória Disponível no Sistema Operacional**
 ```sql
 SELECT *
 FROM sys.dm_os_sys_memory;
 ```
 Objetivo:
 
-Avaliar memória livre no SO
+- Avaliar memória livre no SO
+- Identificar pressão externa ao SQL Server
 
-Identificar pressão externa ao SQL Server
+---
 
-<br><br>
-
-🖥️ PerfMon (Sistema Operacional)
+🖥️ **PerfMon (Sistema Operacional)**
 
 Principais contadores:
 
-SQLServer:Memory Manager\Memory Grants Pending
-
-SQLServer:Buffer Manager\Page Life Expectancy
-
-Memory\Available MBytes
+- SQLServer:Memory Manager\Memory Grants Pending
+- SQLServer:Buffer Manager\Page Life Expectancy
+- Memory\Available MBytes
 
 Objetivo:
 
-Confirmar pressão real de memória
+- Confirmar pressão real de memória
+- Diferenciar gargalo SQL vs Sistema Operacional
 
-Diferenciar gargalo SQL vs Sistema Operacional
+---
 
-<br><br>
-
-🧰 ScriptDBA / Ferramentas Opcionais
+🧰 **ScriptDBA / Ferramentas Opcionais**
 
 Ferramenta não nativa:
 
-sp_whoisactive
+- sp_whoisactive
 
 Uso recomendado para análise rápida de grants e sessões.
 
-<br><br>
+---
 
-🧩 Possíveis Causas
+🧩 **Possíveis Causas**
 
-Consultas com alto consumo de memória
+- Consultas com alto consumo de memória
+- Falta de índices adequados
+- Paralelismo excessivo
+- Configuração inadequada de Max Server Memory
+- Pressão externa no servidor
 
-Falta de índices adequados
+---
 
-Paralelismo excessivo
+🛠️ **Ações de Mitigação**
 
-Configuração inadequada de Max Server Memory
+- Identificar sessões com grants elevados
+- Avaliar planos de execução
+- Ajustar Max Server Memory (quando necessário)
+- Revisar índices e estatísticas
+- Reduzir paralelismo em consultas críticas
 
-Pressão externa no servidor
+---
 
-<br><br>
-
-🛠️ Ações de Mitigação
-
-Identificar sessões com grants elevados
-
-Avaliar planos de execução
-
-Ajustar Max Server Memory (quando necessário)
-
-Revisar índices e estatísticas
-
-Reduzir paralelismo em consultas críticas
-
-<br><br>
-
-🔁 Monitoramento Pós-Mitigation
+🔁 **Monitoramento Pós-Mitigation**
+```sql
 SELECT *
 FROM sys.dm_exec_query_memory_grants;
+
 SELECT *
 FROM sys.dm_os_process_memory;
+```
