--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -21,7 +21,8 @@ EXEC sp_whoisactive;
 
 SELECT * 
 FROM sys.dm_exec_query_memory_grants;
-
+```
+```sql
 SELECT * 
 FROM sys.dm_os_process_memory;
 ```
@@ -127,7 +128,8 @@ Uso recomendado para análise rápida de grants e sessões.
 ```sql
 SELECT *
 FROM sys.dm_exec_query_memory_grants;
-
+```
+```sql
 SELECT *
 FROM sys.dm_os_process_memory;
 ```
