--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -16,9 +16,8 @@ Identificar pressão de memória no SQL Server e no Sistema Operacional, analisa
 
 Ferramenta opcional:
 
+- EXEC sp_whoisactive;
 ```sql
-EXEC sp_whoisactive;
-
 SELECT * 
 FROM sys.dm_exec_query_memory_grants;
 ```
