--- a/Infraestrutura/1.1.3-threadpool.md
+++ b/Infraestrutura/1.1.3-threadpool.md
@@ -16,12 +16,12 @@ Identificar exaustão de threads (THREADPOOL) causada por excesso de sessões co
 
 Ferramenta opcional:
 
+- EXEC sp_whoisactive;
 ```sql
-EXEC sp_whoisactive;
-
 SELECT *
 FROM sys.dm_exec_requests;
-
+```
+```sql
 SELECT *
 FROM sys.dm_os_waiting_tasks
 WHERE wait_type = 'THREADPOOL';
@@ -110,7 +110,8 @@ Uso recomendado para identificar sessões bloqueadoras e long running.
 SELECT *
 FROM sys.dm_os_waiting_tasks
 WHERE wait_type = 'THREADPOOL';
-
+```
+```sql
 SELECT *
 FROM sys.dm_exec_requests;
 ```
