--- a/Infraestrutura/1.1.4-excesso-conexoes.md
+++ b/Infraestrutura/1.1.4-excesso-conexoes.md
@@ -1,1 +1,120 @@
+# 🔗 1.1.4 Excesso de conexões
+**Categoria:** Infraestrutura  
+**CI afetado:** Instância SQL  
+**Escopo:** Engine / Conectividade  
+**Severidade sugerida:** P2  
 
+---
+
+## 🎯 Objetivo
+
+Identificar excesso de conexões simultâneas que possam impactar consumo de recursos, concorrência e estabilidade da instância SQL Server.
+
+---
+
+## 🔎 Diagnóstico Inicial (Quick Triage)
+
+Ferramenta opcional:
+
+- EXEC sp_whoisactive;
+- ```sql
+SELECT *
+FROM sys.dm_exec_sessions;
+```
+```sql
+SELECT *
+FROM sys.dm_exec_connections;
+```sql
+
+---
+
+🧠 **Análise por DMV**
+- **Sessões Ativas**
+```sql
+SELECT *
+FROM sys.dm_exec_sessions
+WHERE is_user_process = 1;
+```
+Objetivo:
+- Identificar volume de conexões abertas
+- Detectar sessões inativas
+
+##
+
+- **Conexões Estabelecidas**
+```sql
+SELECT *
+FROM sys.dm_exec_connections;
+```
+
+Objetivo:
+- Validar origem das conexões
+- Identificar aplicações dominantes
+
+##
+
+- **Performance Counters**
+```sql
+SELECT *
+FROM sys.dm_os_performance_counters
+WHERE counter_name = 'User Connections';
+```
+<br>
+Objetivo:
+- Monitorar crescimento de conexões
+
+--- 
+
+🖥️ **PerfMon (Sistema Operacional)**
+
+Principais contadores:
+- SQLServer:General Statistics\User Connections
+- SQLServer:SQL Statistics\Batch Requests/sec
+- Process(sqlservr)\Handle Count
+<br>
+Objetivo:
+- Avaliar impacto real das conexões na instância
+
+---
+
+🧰 **ScriptDBA / Ferramentas Opcionais**
+
+Ferramenta não nativa:
+
+- sp_whoisactive
+
+Uso recomendado para visualizar conexões por aplicação.
+
+---
+
+🧩 **Possíveis Causas**
+
+- Pool de conexões mal configurado
+- Aplicações sem controle de sessão
+- Reconexões constantes
+- Falta de timeout na aplicação
+- Serviços externos realizando polling excessivo
+
+---
+
+🛠️ **Ações de Mitigação**
+
+- Identificar aplicação com maior volume de conexões
+- Ajustar pool de conexões
+- Encerrar sessões órfãs
+- Revisar configuração de timeout
+- Avaliar limites de conexão
+
+---
+
+🔁 **Monitoramento Pós-Mitigation**
+```sql
+SELECT *
+FROM sys.dm_exec_sessions
+WHERE is_user_process = 1;
+```
+```sql
+SELECT *
+FROM sys.dm_os_performance_counters
+WHERE counter_name = 'User Connections';
+```
