--- a/Infraestrutura/1.2.1-latencia-io.md
+++ b/Infraestrutura/1.2.1-latencia-io.md
@@ -1,1 +1,127 @@
+# 💽 1.2.1 Latência de I/O elevada
+**Categoria:** Infraestrutura  
+**CI afetado:** Disco Data / Disco Log / Storage Azure  
+**Escopo:** Arquivos MDF / NDF / LDF  
+**Severidade sugerida:** P1 / P2  
 
+---
+
+## 🎯 Objetivo
+
+Identificar gargalos de leitura e escrita em disco que possam impactar performance da instância SQL Server, avaliando latência por arquivo e waits relacionados a I/O.
+
+---
+
+## 🔎 Diagnóstico Inicial (Quick Triage)
+
+Ferramenta opcional:
+
+- EXEC sp_whoisactive;
+- ```sql
+SELECT *
+FROM sys.dm_exec_requests;
+```
+```sql
+SELECT TOP 10 *
+FROM sys.dm_os_wait_stats
+WHERE wait_type LIKE 'PAGEIOLATCH%'
+ORDER BY wait_time_ms DESC;
+```
+
+---
+
+🧠 **Análise por DMV**
+- **Latência por Arquivo**
+```sql
+SELECT 
+    DB_NAME(vfs.database_id) AS DatabaseName,
+    mf.name AS LogicalName,
+    vfs.num_of_reads,
+    vfs.num_of_writes,
+    vfs.io_stall_read_ms,
+    vfs.io_stall_write_ms
+FROM sys.dm_io_virtual_file_stats(NULL, NULL) vfs
+JOIN sys.master_files mf
+ON vfs.database_id = mf.database_id
+AND vfs.file_id = mf.file_id;
+```
+Objetivo:
+- Identificar arquivos com maior tempo de espera em I/O
+
+##
+
+- **Waits Relacionados a Disco**
+```sql
+SELECT TOP 10 *
+FROM sys.dm_os_wait_stats
+WHERE wait_type LIKE 'PAGEIOLATCH%'
+ORDER BY wait_time_ms DESC;
+```
+Objetivo:
+- Confirmar impacto de leitura física em disco
+
+##
+
+- **Sessões Aguardando I/O**
+```sql
+SELECT *
+FROM sys.dm_exec_requests
+WHERE wait_type LIKE 'PAGEIOLATCH%';
+```
+Objetivo:
+- Identificar consultas afetadas diretamente por latência
+
+---
+
+🖥️ **PerfMon (Sistema Operacional)**
+
+Principais contadores:
+- PhysicalDisk\Avg. Disk sec/Read
+- PhysicalDisk\Avg. Disk sec/Write
+- PhysicalDisk\Disk Transfers/sec
+<br>
+Objetivo:
+- Validar latência real no storage
+- Diferenciar gargalo SQL vs infraestrutura
+
+---
+
+🧰 **ScriptDBA / Ferramentas Opcionais**
+
+Ferramenta não nativa:
+- sp_whoisactive
+
+Uso recomendado para identificar sessões aguardando I/O.
+
+--- 
+
+🧩 **Possíveis Causas**
+
+- Storage saturado
+- Falta de IOPS provisionadas
+- Autogrowth frequente
+- Índices fragmentados
+- Consultas realizando scans extensos
+
+---
+
+🛠️ **Ações de Mitigação**
+
+- Identificar arquivo com maior latência
+- Revisar configuração de storage
+- Avaliar índices e planos de execução
+- Ajustar tamanho inicial dos arquivos
+- Validar separação de Data e Log
+
+---
+
+🔁 **Monitoramento Pós-Mitigation**
+```sql
+SELECT *
+FROM sys.dm_io_virtual_file_stats(NULL, NULL);
+```
+```sql
+SELECT *
+FROM sys.dm_exec_requests
+WHERE wait_type LIKE 'PAGEIOLATCH%';
+```
