--- a/Infraestrutura/1.2.1-latencia-io.md
+++ b/Infraestrutura/1.2.1-latencia-io.md
@@ -17,7 +17,7 @@ Identificar gargalos de leitura e escrita em disco que possam impactar performan
 Ferramenta opcional:
 
 - EXEC sp_whoisactive;
-- ```sql
+```sql
 SELECT *
 FROM sys.dm_exec_requests;
 ```
