--- a/Infraestrutura/1.2.3-consumo-storage.md
+++ b/Infraestrutura/1.2.3-consumo-storage.md
@@ -26,7 +26,7 @@ FROM sys.master_files;
 
 🧠 **Análise por DMV**
 - **Tabelas com maior consumo de espaço**
-- ```sql
+```sql
 SELECT TOP 10
     OBJECT_NAME(object_id) AS TableName,
     SUM(reserved_page_count) * 8 / 1024 AS SizeMB
@@ -89,13 +89,13 @@ Uso recomendado para identificar sessões gerando grande volume de escrita.
 
 🛠️ **Ações de Mitigação**
 
--- Identificar tabelas dominantes
--- Avaliar compressão de dados
--- Revisar estratégia de arquivamento
--- Remover índices desnecessários
--- Validar crescimento esperado vs real
+- Identificar tabelas dominantes
+- Avaliar compressão de dados
+- Revisar estratégia de arquivamento
+- Remover índices desnecessários
+- Validar crescimento esperado vs real
 
---
+---
 
 🔁 **Monitoramento Pós-Mitigation**
 ```sql
