--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -17,11 +17,11 @@ Ferramenta opcional:
 
 EXEC sp_whoisactive;
 
-```sql
+```SQL
 SELECT * FROM sys.dm_exec_requests;
 ```
 
-```sql
+```SQL
 SELECT TOP 5 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
@@ -33,7 +33,7 @@ ORDER BY wait_time_ms DESC;
 <br>
 - **Sessões ativas**
 
-```sql
+```SQL
 SELECT * FROM sys.dm_exec_requests;
 ```
 
@@ -41,7 +41,7 @@ SELECT * FROM sys.dm_exec_requests;
 
 - **Consultas com maior consumo de CPU**
 
-```sql
+```SQL
 SELECT TOP 10
     qs.total_worker_time,
     st.text
@@ -54,7 +54,7 @@ ORDER BY qs.total_worker_time DESC;
 
 - **Análise de Waits**
 
-```sql
+```SQL
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
@@ -64,7 +64,7 @@ ORDER BY wait_time_ms DESC;
 
 📊 Query Store
 
-```sql
+```SQL
 SELECT TOP 10 *
 FROM sys.query_store_runtime_stats
 ORDER BY avg_cpu_time DESC;
@@ -111,11 +111,11 @@ Ferramenta não nativa:
 
 🔁 Monitoramento Pós-Mitigation
 
-```sql
+```SQL
 SELECT * FROM sys.dm_exec_requests;
 ```
 
-```sql
+```SQL
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
 ORDER BY wait_time_ms DESC;
