--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -17,11 +17,11 @@ Identificar pressão de memória no SQL Server e no Sistema Operacional, analisa
 Ferramenta opcional:
 
 - EXEC sp_whoisactive;
-```sql
+```SQL
 SELECT * 
 FROM sys.dm_exec_query_memory_grants;
 ```
-```sql
+```SQL
 SELECT * 
 FROM sys.dm_os_process_memory;
 ```
@@ -29,7 +29,7 @@ FROM sys.dm_os_process_memory;
 
 🧠 **Análise por DMV**
 - **Grants de Memória Ativos**
-```sql
+```SQL
 SELECT *
 FROM sys.dm_exec_query_memory_grants;
 ```
@@ -42,7 +42,7 @@ Objetivo:
 ##
 
 - **Consumo Interno de Memória (Clerks)**
-```sql
+```SQL
 SELECT *
 FROM sys.dm_os_memory_clerks
 ORDER BY pages_kb DESC;
@@ -54,7 +54,7 @@ Objetivo:
 ##
 
 - **Memória do Processo SQL Server**
-```sql
+```SQL
 SELECT *
 FROM sys.dm_os_process_memory;
 ```
@@ -65,7 +65,7 @@ Objetivo:
 ##
 
 - **Memória Disponível no Sistema Operacional**
-```sql
+```SQL
 SELECT *
 FROM sys.dm_os_sys_memory;
 ```
@@ -124,11 +124,11 @@ Uso recomendado para análise rápida de grants e sessões.
 ---
 
 🔁 **Monitoramento Pós-Mitigation**
-```sql
+```SQL
 SELECT *
 FROM sys.dm_exec_query_memory_grants;
 ```
-```sql
+```SQL
 SELECT *
 FROM sys.dm_os_process_memory;
 ```
