--- a/Infraestrutura/1.3.3-erros-errorlog.md
+++ b/Infraestrutura/1.3.3-erros-errorlog.md
@@ -13,16 +13,20 @@ Identificar erros críticos registrados no SQL Server Error Log que possam indic
 ---
 
 ## 🔎 Diagnóstico Inicial (Quick Triage)
-
-- EXEC xp_readerrorlog;
-- EXEC xp_readerrorlog 0, 1, 'Error';
+```SQL
+EXEC xp_readerrorlog;
+```
+```SQL
+EXEC xp_readerrorlog 0, 1, 'Error';
+```
 
 ---
 
 🧠 **Análise por SQL Server**
 - **Leitura completa do Error Log**
-- EXEC xp_readerrorlog;
-
+```SQL
+EXEC xp_readerrorlog;
+```
 Objetivo:
 
 - Identificar mensagens críticas recentes
@@ -31,8 +35,12 @@ Objetivo:
 
 - **Filtrar mensagens específicas**
 
-- EXEC xp_readerrorlog 0, 1, 'failed';
-- EXEC xp_readerrorlog 0, 1, 'error';
+```SQL
+EXEC xp_readerrorlog 0, 1, 'failed';
+```
+```SQL
+EXEC xp_readerrorlog 0, 1, 'error';
+```
 
 Objetivo:
 
