Atualizar o 1.2.2-falta-espaco.md

--- a/Infraestrutura/1.2.2-falta-espaco.md
+++ b/Infraestrutura/1.2.2-falta-espaco.md
@@ -27,8 +27,6 @@ FROM sys.database_files;
 DBCC SQLPERF(LOGSPACE);  
 ```
 
-```
-
 ---
 
 🧠 **Análise por DMV**
@@ -48,7 +46,9 @@ Objetivo:
 ##
 
 - **Consumo de Transaction Log**
-- DBCC SQLPERF(LOGSPACE);
+```sql
+DBCC SQLPERF(LOGSPACE);
+```
 
 Objetivo:
 
@@ -86,8 +86,9 @@ Objetivo:
 
 Ferramenta não nativa:
 
-- sp_whoisactive
-
+```sql
+sp_whoisactive
+```
 Uso recomendado para identificar sessões consumindo espaço excessivo.
 
 ---
