Refine TempDB analysis documentation
Removed unnecessary line breaks and clarified objectives for TempDB analysis.

--- a/Plataforma/2.1.1-contencao-tempdb.md
+++ b/Plataforma/2.1.1-contencao-tempdb.md
@@ -24,7 +24,7 @@ SELECT *
 FROM sys.dm_os_waiting_tasks
 WHERE wait_type LIKE 'PAGELATCH%';
 ```
-<br><br>
+<br>
 
 🧠 **Análise por DMV**
 - **Waits Relacionados à TempDB**
@@ -36,7 +36,7 @@ ORDER BY wait_time_ms DESC;
 ```
 Objetivo:
 
-Identificar contenção de páginas internas (PFS, GAM, SGAM)
+- Identificar contenção de páginas internas (PFS, GAM, SGAM)
 
 ##
 
@@ -50,7 +50,7 @@ FROM tempdb.sys.database_files;
 ```
 Objetivo:
 
-Validar quantidade e tamanho dos arquivos
+- Validar quantidade e tamanho dos arquivos
 
 ##
 
@@ -65,7 +65,7 @@ ORDER BY internal_objects_alloc_page_count DESC;
 ```
 Objetivo:
 
-Identificar sessões consumindo TempDB excessivamente
+- Identificar sessões consumindo TempDB excessivamente
 
 ---
 
@@ -78,7 +78,7 @@ Principais contadores:
 <br>
 Objetivo:
 
-Validar pressão real na TempDB
+- Validar pressão real na TempDB
 
 ---
 
