Fix formatting for 'Sessões Bloqueadas' section

--- a/Plataforma/2.1.2-locks-latches.md
+++ b/Plataforma/2.1.2-locks-latches.md
@@ -27,7 +27,7 @@ WHERE wait_type LIKE 'LCK%';
 ---
 
 🧠 **Análise por Locks**
-- **Sessões Bloqueadas**
+**Sessões Bloqueadas**
 ```sql
 SELECT 
     session_id,
