Fix formatting for Locks and Latches sections

--- a/Plataforma/2.1.2-locks-latches.md
+++ b/Plataforma/2.1.2-locks-latches.md
@@ -43,7 +43,7 @@ Objetivo:
 
 ##
 
-- **Locks Ativos**
+**Locks Ativos**
 ```sql
 SELECT *
 FROM sys.dm_tran_locks;
@@ -56,7 +56,7 @@ Objetivo:
 ##
 
 🧠 - **Análise por Latches**
-- **Waits de Latch**
+**Waits de Latch**
 ```sql
 SELECT TOP 10 *
 FROM sys.dm_os_wait_stats
