Format analysis section and improve markdown syntax

--- a/Plataforma/2.1.2-locks-latches.md
+++ b/Plataforma/2.1.2-locks-latches.md
@@ -53,9 +53,9 @@ Objetivo:
 - Verificar tipo de lock (X, S, IX, etc.)
 - Identificar objetos impactados
 
-##
+---
 
-🧠 - **Análise por Latches**
+🧠 **Análise por Latches**
 **Waits de Latch**
 ```sql
 SELECT TOP 10 *
