Add sp_whoisactive tool to initial diagnosis section
Added optional tool for initial diagnosis in SQL.

--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -14,9 +14,9 @@ Identificar sessões, consultas e waits responsáveis por alto consumo de CPU na
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
+```SQL
 EXEC sp_whoisactive;
-
+```
 ```SQL
 SELECT * FROM sys.dm_exec_requests;
 ```
