Update memory pressure documentation with SQL commands
Added SQL command to retrieve memory grants.

--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -15,8 +15,9 @@ Identificar pressão de memória no SQL Server e no Sistema Operacional, analisa
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
-- EXEC sp_whoisactive;
+```SQL
+EXEC sp_whoisactive;
+```
 ```SQL
 SELECT * 
 FROM sys.dm_exec_query_memory_grants;
