Refactor SQL queries for memory analysis

--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -19,20 +19,17 @@ Ferramenta opcional:
 EXEC sp_whoisactive;
 ```
 ```SQL
-SELECT * 
-FROM sys.dm_exec_query_memory_grants;
+SELECT * FROM sys.dm_exec_query_memory_grants;
 ```
 ```SQL
-SELECT * 
-FROM sys.dm_os_process_memory;
+SELECT * FROM sys.dm_os_process_memory;
 ```
 ---
 
 🧠 **Análise por DMV**
 - **Grants de Memória Ativos**
 ```SQL
-SELECT *
-FROM sys.dm_exec_query_memory_grants;
+SELECT * FROM sys.dm_exec_query_memory_grants;
 ```
 
 Objetivo:
@@ -56,8 +53,7 @@ Objetivo:
 
 - **Memória do Processo SQL Server**
 ```SQL
-SELECT *
-FROM sys.dm_os_process_memory;
+SELECT * FROM sys.dm_os_process_memory;
 ```
 Objetivo:
 
@@ -67,8 +63,7 @@ Objetivo:
 
 - **Memória Disponível no Sistema Operacional**
 ```SQL
-SELECT *
-FROM sys.dm_os_sys_memory;
+SELECT * FROM sys.dm_os_sys_memory;
 ```
 Objetivo:
 
@@ -126,10 +121,8 @@ Uso recomendado para análise rápida de grants e sessões.
 
 🔁 **Monitoramento Pós-Mitigation**
 ```SQL
-SELECT *
-FROM sys.dm_exec_query_memory_grants;
+SELECT * FROM sys.dm_exec_query_memory_grants;
 ```
 ```SQL
-SELECT *
-FROM sys.dm_os_process_memory;
+SELECT * FROM sys.dm_os_process_memory;
 ```
