Fix SQL query formatting in memory report

--- a/Infraestrutura/1.1.2-memoria-sob-pressao.md
+++ b/Infraestrutura/1.1.2-memoria-sob-pressao.md
@@ -41,8 +41,7 @@ Objetivo:
 
 - **Consumo Interno de Memória (Clerks)**
 ```SQL
-SELECT *
-FROM sys.dm_os_memory_clerks
+SELECT * FROM sys.dm_os_memory_clerks
 ORDER BY pages_kb DESC;
 ```
 Objetivo:
