Improve SQL formatting in threadpool documentation
Formatted SQL code blocks for better readability.

--- a/Infraestrutura/1.1.3-threadpool.md
+++ b/Infraestrutura/1.1.3-threadpool.md
@@ -15,15 +15,14 @@ Identificar exaustão de threads (THREADPOOL) causada por excesso de sessões co
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
-- EXEC sp_whoisactive;
-```sql
-SELECT *
-FROM sys.dm_exec_requests;
+```SQL
+ EXEC sp_whoisactive;
 ```
 ```sql
-SELECT *
-FROM sys.dm_os_waiting_tasks
+SELECT * FROM sys.dm_exec_requests;
+```
+```sql
+SELECT * FROM sys.dm_os_waiting_tasks
 WHERE wait_type = 'THREADPOOL';
 ```
 ---
@@ -31,8 +30,7 @@ WHERE wait_type = 'THREADPOOL';
 🧠 **Análise por DMV**
 - **Waits THREADPOOL**
 ```sql
-SELECT *
-FROM sys.dm_os_waiting_tasks
+SELECT * FROM sys.dm_os_waiting_tasks
 WHERE wait_type = 'THREADPOOL';
 ```
 
@@ -43,8 +41,7 @@ Objetivo:
 
 - **Sessões em execução**
 ```sql
-SELECT *
-FROM sys.dm_exec_requests;
+SELECT * FROM sys.dm_exec_requests;
 ```
 Objetivo:
 - Detectar consultas longas consumindo workers
@@ -112,6 +109,5 @@ FROM sys.dm_os_waiting_tasks
 WHERE wait_type = 'THREADPOOL';
 ```
 ```sql
-SELECT *
-FROM sys.dm_exec_requests;
+SELECT * FROM sys.dm_exec_requests;
 ```
