Improve SQL command formatting in documentation
Format SQL commands in markdown for better readability.

--- a/Infraestrutura/1.1.4-excesso-conexoes.md
+++ b/Infraestrutura/1.1.4-excesso-conexoes.md
@@ -15,15 +15,14 @@ Identificar excesso de conexões simultâneas que possam impactar consumo de rec
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
-- EXEC sp_whoisactive;
-```sql
-SELECT *
-FROM sys.dm_exec_sessions;
+```SQL
+EXEC sp_whoisactive;
 ```
 ```sql
-SELECT *
-FROM sys.dm_exec_connections;
+SELECT * FROM sys.dm_exec_sessions;
+```
+```sql
+SELECT * FROM sys.dm_exec_connections;
 ```
 
 ---
@@ -43,8 +42,7 @@ Objetivo:
 
 - **Conexões Estabelecidas**
 ```sql
-SELECT *
-FROM sys.dm_exec_connections;
+SELECT * FROM sys.dm_exec_connections;
 ```
 
 Objetivo:
