Update SQL commands formatting in latency IO document
Format SQL commands in markdown for better readability.

--- a/Infraestrutura/1.2.1-latencia-io.md
+++ b/Infraestrutura/1.2.1-latencia-io.md
@@ -15,11 +15,11 @@ Identificar gargalos de leitura e escrita em disco que possam impactar performan
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
-- EXEC sp_whoisactive;
+```SQL
+EXEC sp_whoisactive;
+```
 ```sql
-SELECT *
-FROM sys.dm_exec_requests;
+SELECT * FROM sys.dm_exec_requests;
 ```
 ```sql
 SELECT TOP 10 *
