Refactor SQL query for TempDB validation
Removed unnecessary line breaks in SQL query for TempDB.

--- a/Infraestrutura/1.2.2-falta-espaco.md
+++ b/Infraestrutura/1.2.2-falta-espaco.md
@@ -58,8 +58,7 @@ Objetivo:
 
 - **TempDB**
 ```sql
-SELECT *
-FROM tempdb.sys.database_files;
+SELECT * FROM tempdb.sys.database_files;
 ```
 Objetivo:
 
