Update diagnostic section with sp_whoisactive command
Added SQL command for active session diagnostics.

--- a/Infraestrutura/1.2.3-consumo-storage.md
+++ b/Infraestrutura/1.2.3-consumo-storage.md
@@ -15,11 +15,11 @@ Identificar crescimento inesperado de storage causado por objetos específicos d
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
+```SQL
 EXEC sp_whoisactive;
+```
 ```sql
-SELECT *
-FROM sys.master_files;
+SELECT * FROM sys.master_files;
 ```
 
 ---
