Improve SQL formatting in autogrowth documentation
Formatted SQL code blocks for better readability and consistency.

--- a/Infraestrutura/1.2.4-autogrowth.md
+++ b/Infraestrutura/1.2.4-autogrowth.md
@@ -15,8 +15,9 @@ Identificar crescimento automático inesperado de arquivos de dados e log que po
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 Ferramenta opcional:
-
-- EXEC sp_whoisactive;
+```SQL
+EXEC sp_whoisactive;
+```
 ```
 SELECT name, size, growth, max_size
 FROM sys.database_files;
@@ -41,8 +42,7 @@ Objetivo:
 
 - **Uso do Transaction Log**
 ```sql
-SELECT *
-FROM sys.dm_db_log_space_usage;
+SELECT * FROM sys.dm_db_log_space_usage;
 ```
 Objetivo:
 
@@ -113,6 +113,5 @@ SELECT name, size * 8 / 1024 AS SizeMB
 FROM sys.database_files;
 ```
 ```sql
-SELECT *
-FROM sys.dm_db_log_space_usage;
+SELECT * FROM sys.dm_db_log_space_usage;
 ```
