Update PowerShell command formatting in error log
Removed code block formatting for PowerShell command.

--- a/Infraestrutura/1.3.3-erros-errorlog.md
+++ b/Infraestrutura/1.3.3-erros-errorlog.md
@@ -66,9 +66,8 @@ Objetivo:
 Ferramentas recomendadas:
 
 - SQL Server Management Studio (Logs)
-```PowerShell
-PowerShell Get-EventLog
-```
+- PowerShell Get-EventLog
+
 ---
 
 🧩 **Possíveis Causas**
