--- a/Plataforma/2.1.1-contencao-tempdb.md
+++ b/Plataforma/2.1.1-contencao-tempdb.md
@@ -110,6 +110,5 @@ FROM sys.dm_os_wait_stats
 WHERE wait_type LIKE 'PAGELATCH%';
 ```
 ```sql
-SELECT *
-FROM sys.dm_db_session_space_usage;
+SELECT * FROM sys.dm_db_session_space_usage;
 ```
