Fix SQL code block formatting in documentation

--- a/Plataforma/2.1.1-contencao-tempdb.md
+++ b/Plataforma/2.1.1-contencao-tempdb.md
@@ -109,6 +109,5 @@ SELECT *
 FROM sys.dm_os_wait_stats
 WHERE wait_type LIKE 'PAGELATCH%';
 ```
-```sql
-SELECT * FROM sys.dm_db_session_space_usage;
+```sql SELECT * FROM sys.dm_db_session_space_usage;
 ```
