Refactor SQL examples and improve documentation
Updated SQL code formatting and clarified usage of sp_whoisactive.

--- a/Plataforma/2.1.2-locks-latches.md
+++ b/Plataforma/2.1.2-locks-latches.md
@@ -45,8 +45,7 @@ Objetivo:
 
 **Locks Ativos**
 ```sql
-SELECT *
-FROM sys.dm_tran_locks;
+SELECT * FROM sys.dm_tran_locks;
 ```
 Objetivo:
 
@@ -86,9 +85,9 @@ Objetivo:
 🧰 **ScriptDBA / Ferramentas Opcionais**
 
 Ferramenta não nativa:
-```sql
-sp_whoisactive
-```
+
+- sp_whoisactive
+
 Uso recomendado para visualizar bloqueios e cadeia de sessões.
 
 ---
