--- a/Plataforma/2.2.4-falha-replicacao.md
+++ b/Plataforma/2.2.4-falha-replicacao.md
@@ -15,8 +15,7 @@ Identificar falhas de sincronização, atrasos ou erros em ambientes configurado
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 ```sql
-SELECT *
-FROM msdb.dbo.MSdistribution_status;
+SELECT * FROM msdb.dbo.MSdistribution_status;
 ```
 ```sql
 SELECT *
@@ -54,8 +53,7 @@ Objetivo:
 
 - **Pendências na Distribuição**
 ```sql
-SELECT *
-FROM distribution.dbo.MSdistribution_status;
+SELECT * FROM distribution.dbo.MSdistribution_status;
 ```
 Objetivo:
 
@@ -103,6 +101,5 @@ FROM msdb.dbo.MSrepl_errors
 ORDER BY time DESC;
 ```
 ```sql
-SELECT *
-FROM distribution.dbo.MSdistribution_status;
+SELECT * FROM distribution.dbo.MSdistribution_status;
 ```
