--- a/Plataforma/2.2.3-falha-logshipping.md
+++ b/Plataforma/2.2.3-falha-logshipping.md
@@ -15,10 +15,12 @@ Identificar falhas no processo de Log Shipping envolvendo etapas de backup, cóp
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 ```sql
-SELECT * FROM msdb.dbo.log_shipping_monitor_primary;
+SELECT *
+FROM msdb.dbo.log_shipping_monitor_primary;
 ```
 ```sql
-SELECT * FROM msdb.dbo.log_shipping_monitor_secondary;
+SELECT *
+FROM msdb.dbo.log_shipping_monitor_secondary;
 ```
 ---
 
