Fix SQL formatting in availability replica states section

--- a/Plataforma/2.2.1-falha-alwayson.md
+++ b/Plataforma/2.2.1-falha-alwayson.md
@@ -15,10 +15,12 @@ Identificar falhas de sincronização, indisponibilidade ou problemas de comunic
 ## 🔎 Diagnóstico Inicial (Quick Triage)
 
 ```sql
-SELECT * FROM sys.dm_hadr_availability_replica_states;
+SELECT *
+FROM sys.dm_hadr_availability_replica_states;
 ```
 ```sql
-SELECT * FROM sys.dm_hadr_database_replica_states;
+SELECT *
+FROM sys.dm_hadr_database_replica_states;
 ```
 ---
 
@@ -60,7 +62,8 @@ Objetivo:
 
 - **Cluster e Quorum**
 ```sql
-SELECT * FROM sys.dm_hadr_cluster;
+SELECT *
+FROM sys.dm_hadr_cluster;
 ```
 Objetivo:
 - Validar comunicação com WSFC
