Fix formatting of SQL queries in documentation

--- a/Infraestrutura/1.3.1-falha-cluster.md
+++ b/Infraestrutura/1.3.1-falha-cluster.md
@@ -28,7 +28,8 @@ Get-ClusterGroup
 🧠 **Análise por DMV**
 - **Estado do Cluster via SQL Server**
 ```powershell
-SELECT * FROM sys.dm_hadr_cluster;
+SELECT *
+FROM sys.dm_hadr_cluster;
 ```
 Objetivo:
 
@@ -38,7 +39,8 @@ Objetivo:
 
 - **Estado das Réplicas (quando aplicável)**
 ```powershell
-SELECT * FROM sys.dm_hadr_availability_replica_states;
+SELECT *
+FROM sys.dm_hadr_availability_replica_states;
 ```
 Objetivo:
 
@@ -91,7 +93,8 @@ Ferramentas recomendadas:
 
 🔁 **Monitoramento Pós-Mitigation**
 ```sql
-SELECT * FROM sys.dm_hadr_cluster;
+SELECT *
+FROM sys.dm_hadr_cluster;
 ```
 ```powershell
 Get-ClusterNode
