Refactor SQL queries in autogrowth documentation
Updated SQL queries for better clarity and formatting.

--- a/Infraestrutura/1.2.4-autogrowth.md
+++ b/Infraestrutura/1.2.4-autogrowth.md
@@ -18,7 +18,7 @@ Ferramenta opcional:
 ```SQL
 EXEC sp_whoisactive;
 ```
-```
+```SQL
 SELECT name, size, growth, max_size
 FROM sys.database_files;
 ```
@@ -42,7 +42,8 @@ Objetivo:
 
 - **Uso do Transaction Log**
 ```sql
-SELECT * FROM sys.dm_db_log_space_usage;
+SELECT *
+FROM sys.dm_db_log_space_usage;
 ```
 Objetivo:
 
@@ -113,5 +114,6 @@ SELECT name, size * 8 / 1024 AS SizeMB
 FROM sys.database_files;
 ```
 ```sql
-SELECT * FROM sys.dm_db_log_space_usage;
+SELECT *
+FROM sys.dm_db_log_space_usage;
 ```
