Fix SQL formatting in consumo-storage.md

--- a/Infraestrutura/1.2.3-consumo-storage.md
+++ b/Infraestrutura/1.2.3-consumo-storage.md
@@ -19,7 +19,8 @@ Ferramenta opcional:
 EXEC sp_whoisactive;
 ```
 ```sql
-SELECT * FROM sys.master_files;
+SELECT *
+FROM sys.master_files;
 ```
 
 ---
