Fix SQL query formatting in TempDB section
Correct SQL query formatting for TempDB validation.

--- a/Infraestrutura/1.2.2-falta-espaco.md
+++ b/Infraestrutura/1.2.2-falta-espaco.md
@@ -58,7 +58,8 @@ Objetivo:
 
 - **TempDB**
 ```sql
-SELECT * FROM tempdb.sys.database_files;
+SELECT *
+FROM tempdb.sys.database_files;
 ```
 Objetivo:
 
