Fix SQL formatting in latency documentation

--- a/Infraestrutura/1.2.1-latencia-io.md
+++ b/Infraestrutura/1.2.1-latencia-io.md
@@ -19,7 +19,8 @@ Ferramenta opcional:
 EXEC sp_whoisactive;
 ```
 ```sql
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
 ```sql
 SELECT TOP 10 *
