Fix SQL formatting in excess connections documentation

--- a/Infraestrutura/1.1.4-excesso-conexoes.md
+++ b/Infraestrutura/1.1.4-excesso-conexoes.md
@@ -19,10 +19,12 @@ Ferramenta opcional:
 EXEC sp_whoisactive;
 ```
 ```sql
-SELECT * FROM sys.dm_exec_sessions;
+SELECT *
+FROM sys.dm_exec_sessions;
 ```
 ```sql
-SELECT * FROM sys.dm_exec_connections;
+SELECT *
+FROM sys.dm_exec_connections;
 ```
 
 ---
@@ -42,7 +44,8 @@ Objetivo:
 
 - **Conexões Estabelecidas**
 ```sql
-SELECT * FROM sys.dm_exec_connections;
+SELECT *
+FROM sys.dm_exec_connections;
 ```
 
 Objetivo:
