Fix SQL formatting for sys.dm_exec_requests queries

--- a/Infraestrutura/1.1.3-threadpool.md
+++ b/Infraestrutura/1.1.3-threadpool.md
@@ -19,7 +19,8 @@ Ferramenta opcional:
  EXEC sp_whoisactive;
 ```
 ```sql
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
 ```sql
 SELECT * FROM sys.dm_os_waiting_tasks
@@ -41,7 +42,8 @@ Objetivo:
 
 - **Sessões em execução**
 ```sql
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
 Objetivo:
 - Detectar consultas longas consumindo workers
@@ -109,5 +111,6 @@ FROM sys.dm_os_waiting_tasks
 WHERE wait_type = 'THREADPOOL';
 ```
 ```sql
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
