Fix SQL query formatting in documentation

--- a/Infraestrutura/1.1.1-cpu-elevada.md
+++ b/Infraestrutura/1.1.1-cpu-elevada.md
@@ -18,7 +18,8 @@ Ferramenta opcional:
 EXEC sp_whoisactive;
 ```
 ```SQL
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
 
 ```SQL
@@ -34,7 +35,8 @@ ORDER BY wait_time_ms DESC;
 - **Sessões ativas**
 
 ```SQL
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
 
 ##
@@ -112,7 +114,8 @@ Ferramenta não nativa:
 🔁 Monitoramento Pós-Mitigation
 
 ```SQL
-SELECT * FROM sys.dm_exec_requests;
+SELECT *
+FROM sys.dm_exec_requests;
 ```
 
 ```SQL
